Fixed too dark colors for readable elements.

--- a/src/default/assets/css/elements/_comment.sass
+++ b/src/default/assets/css/elements/_comment.sass
@@ -18,7 +18,7 @@ dl.tsd-comment-tags
         margin: 0 10px 0 0
         border-radius: 4px
         border: 1px solid $COLOR_COMMENT_TAG
-        color: $COLOR_COMMENT_TAG
+        color: $COLOR_COMMENT_TAG_TEXT
         font-size: 0.8em
         font-weight: normal
 
