--- a/src/default/assets/css/elements/_signatures.sass
+++ b/src/default/assets/css/elements/_signatures.sass
@@ -38,7 +38,7 @@
                 left: 20px
 
 .tsd-signature-symbol
-    color: $COLOR_TEXT_ASIDE
+    color: $TOOLBAR_TEXT_COLOR
     font-weight: normal
 
 .tsd-signature-type
